<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Money Mate</string>
    <string name="welcome_title">Take Control of Your Finances</string>
    <string name="welcome_description">Track your expenses, set budgets, and achieve your financial goals with ease!</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="create_account">Create account</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="terms_text">I accept Privacy Policy + Terms of Use</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="apple_sign_in">Sign in with Apple</string>
    <string name="facebook_sign_in">Sign in with Facebook</string>
    <string name="welcome_back">Welcome back! Please enter your details</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Transaction Screen -->
    <string name="tien_thu">Income</string>
    <string name="tien_chi">Expense</string>
    <string name="amount_hint">Amount</string>
    <string name="date_hint">Date</string>
    <string name="note_hint">Note</string>
    <string name="category_title">Category</string>
    <string name="add_category">Add category</string>
    <string name="add_income">Add income</string>
    <string name="add_expense">Add expense</string>
    <string name="income_categories">Income categories</string>
    <string name="expense_categories">Expense categories</string>

    <!-- Bottom Navigation -->
    <string name="nav_add">Add</string>
    <string name="nav_report">Report</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_more">More</string>
    <string name="input">Add</string>
    <string name="report">Report</string>
    <string name="calendar">Calendar</string>
    <string name="more">More</string>
    <string name="date_now">April 1, 2025</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="thu">Income</string>
    <string name="t_ng">Total</string>
    <string name="chi">Expense</string>
    <string name="th_ng_4_2025">Month 4 2025</string>
    <string name="kh_ng_c_giao_d_ch_n_o_cho_ng_y_n_y">No transactions for this day</string>
    <string name="th_ng" translatable="false">month %1$s %2$s</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="total">Total: %1$sđ</string>
    <string name="ch_n_ng_n_ng">Select language</string>
    <string name="s_ng">Light</string>
    <string name="t_i">Dark</string>
    <string name="theo_h_th_ng">System</string>
    <string name="ch_n_m_u_s_c">Select color</string>
    <string name="kh_c">Other</string>
    <string name="ng_n_ng">Languages</string>
    <string name="m_u_s_c">Colors</string>
    <string name="category">Category</string>
    <string name="category_salary">Salary</string>
    <string name="category_bonus">Bonus</string>
    <string name="category_interest">Bank Interest</string>
    <string name="category_sales">Sales</string>
    <string name="category_food">Food</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_transport">Transport</string>
    <string name="category_health">Health</string>
    <string name="ghi_ch">Note:</string>
    <string name="doi_mat_khau">Change Password</string>
    <string name="dang_xuat">Logout</string>
    <string name="ban_chac_chan_muon_dang_xuat">Are you sure logout?</string>
    <string name="co">Yes</string>
    <string name="khong">No</string>
    <string name="m_t_kh_u_x_c_nh_n_kh_ng_kh_p">Password confirmation does not match</string>
    <string name="kh_ng_t_m_th_y_ng_i_d_ng">User not found</string>
    <string name="m_t_kh_u_hi_n_t_i_kh_ng_ng">Current password is incorrect</string>
    <string name="i_m_t_kh_u_th_nh_c_ng">Password changed successfully</string>
    <string name="m_t_kh_u_hi_n_t_i">Current password</string>
    <string name="m_t_kh_u_m_i">New password</string>
    <string name="x_c_nh_n_m_t_kh_u">Confirm password</string>
    <string name="i_m_t_kh_u">Change password</string>
    <string name="email_kh_ng_t_n_t_i">Email does not exist</string>
    <string name="m_t_kh_u_m_i_c_g_i_n_email">New password has been sent to your email</string>
    <string name="kh_ng_th_g_i_email_vui_l_ng_th_l_i_sau">Unable to send email. Please try again later</string>
    <string name="kh_i_ph_c_m_t_kh_u">Recover password</string>
    <string name="m_t_kh_u_m_i_c_a_b_n_l">Your new password is: %1$s</string>
    <string name="vui_l_ng_i_n_y_th_ng_tin">Please fill in all the information</string>
    <string name="ng_nh_p_th_nh_c_ng">Login successful</string>
    <string name="email_ho_c_m_t_kh_u_kh_ng_ng">Email or password is incorrect</string>
    <string name="qu_n_m_t_kh_u">Forgot password</string>
    <string name="nh_p_email_ng_k">Enter registered email</string>
    <string name="x_c_nh_n">Confirm</string>
    <string name="h_y">Cancel</string>
    <string name="email_c_g_i">Email has been sent</string>
    <string name="g_i_email_th_t_b_i">Failed to send email</string>
</resources>
